test/Fail/customised/Issue2649.err
Checking Issue2649 (customised/Issue2649.agda).
customised/Issue2649.agda:14.10-11: error: [ShadowedModule]
Duplicate definition of module M. Previous definition of module M
at
customised/Issue2649-2.agda:5.13-14
when scope checking the declaration
  module M = MyModule A x
